updates to sign up form and homepage text

--- a/index.html
+++ b/index.html
@@ -2,6 +2,24 @@
 layout: default
 ---
 
+
+![In Bagan](/images/bagan.jpg){: .medium-image }
+
+# Tech fascinates me. So do words. 
+
+I'm searching for ways to blend them together lucratively. I make my present living from writing, but my goal is to eventually make it from web development. If you're interested, [click here to see my writing and journalism portfolio](http://samanthanorth.com).
+
+I've lived abroad for over ten years, in China, Belgium, Qatar and Turkey. The constant need to adapt to new cultures and working environments has turned me into a much better problem-solver. That helps me a lot when wrangling new stuff in tech. 
+
+Throughout most of 2015 I've been teaching myself web dev basics, including HTML, CSS, Javascript, and WordPress. 
+
+I mainly use free learning resources, e.g. Codeacademy and Free Code Camp, along with the help of various techie friends, in particular the tireless @pkafei.
+
+[The Geeky Hustle](http://thegeekyhustle.com) is worth checking out for some good coding resources and tutorials on Python and data visualisation. 
+
+Over the coming months I'll be writing about my forays into tech-dom, here on this lovely speedy little Jekyll site.
+
+<!---
 <div >
 
   {% for post in site.posts limit:5 %}
@@ -38,4 +56,5 @@ layout: default
 
   <p class="rss-subscribe">subscribe <a href="{{ "/feed.xml" | prepend: site.baseurl }}">via RSS</a></p>
 -->
-</div>
+
+-->
